--- a/src/components/Title/Title.module.scss
+++ b/src/components/Title/Title.module.scss
@@ -1,5 +1,34 @@
+@import "../../assets/styles/theme.scss";
+
 .title {
-    font-family: "OktaNeue-Black";
-    font-size: 12rem;
-    margin: 0;
+    width: 94%;
+    margin-left: 6%;
+    margin-top: 3rem;
+    // border: 2px solid red;
+    display: flex;
+    flex-wrap: wrap;
+    &__first,
+    &__second {
+        font-family: "Nacelle-Regular";
+        font-size: 12rem;
+        margin: 0;
+    }
+    &__second {
+        // border: 2px solid green;
+        margin-top: -4%;
+    }
+}
+
+.smalltext {
+    display: flex;
+    flex-direction: column;
+    font-family: "OktaNeue-Regular";
+    font-size: 1.5rem;
+    // border: 2px solid blue;
+    margin-top: -3%;
+    margin-left: 1rem;
+    span {
+        margin: 0;
+        margin-bottom: -10px;
+    }
 }
