--- a/src/components/Projects/Project/Project.module.scss
+++ b/src/components/Projects/Project/Project.module.scss
@@ -70,7 +70,7 @@
 
         h3 {
             font-family: "OktaNeue-Regular";
-            font-size: 20px;
+            font-size: 17px;
             margin: 0;
         }
 
@@ -93,6 +93,80 @@
                 font-size: 18px;
                 font-family: "OktaNeue-Bold";
             }
+        }
+    }
+
+    &__close {
+        position: absolute;
+        top: 4rem;
+        right: 7rem;
+        height: 30px;
+        // border: 2px solid blue;
+
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        font-family: "OktaNeue-Regular";
+        font-size: 18px;
+        cursor: pointer;
+
+        span {
+            // border: 2px solid green;
+
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
+        &__cross {
+            // border: 2px solid red;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 30px;
+            height: 30px;
+            z-index: 1000;
+            transform: rotate(45deg);
+            transition: 0.3s ease-in-out;
+        }
+    }
+
+    &__close:hover .project__close__cross {
+        transform: rotate(90deg);
+        transition: 0.3s ease-in-out;
+    }
+
+    &__button {
+        position: absolute;
+        bottom: 3rem;
+        right: 7rem;
+        &__btn {
+            border: none;
+            background-color: rgb(26, 26, 26);
+            height: 3rem;
+            width: 15rem;
+            clip-path: polygon(0 0, 100% 0, 100% 83%, 96% 100%, 0 100%);
+            font-family: "OktaNeue-Regular";
+            font-size: 21px;
+            text-align: left;
+            padding-left: 12px;
+            padding-bottom: 5px;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            cursor: pointer;
+            color: white;
+            mix-blend-mode: difference;
+        }
+        &__svg {
+            margin-top: 5px;
+            margin-right: 5px;
+            // border: 2px solid red;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            object-fit: cover;
+            width: 30px;
         }
     }
 }
