--- a/src/components/Projects/Project/Project.module.scss
+++ b/src/components/Projects/Project/Project.module.scss
@@ -1,12 +1,39 @@
-.project {
+.main {
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
-    background-color: #f8f8f8dc;
+
+    // border: 2px solid red;
     z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.project__wrapper {
+    position: absolute;
+    overflow: hidden;
+    background-color: #fff9f9de;
+    top: 50%;
+    left: 50%;
+    width: 0%;
+    height: 0%;
+    transform: translate(-50%, -50%);
+
     -webkit-backdrop-filter: blur(20px);
+    clip-path: polygon(5% 0, 95% 0, 100% 9%, 100% 91%, 95% 100%, 5% 100%, 0 91%, 0 9%);
+    z-index: 120;
     backdrop-filter: blur(20px);
+}
+
+.project {
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background-color: #f8f8f800;
+    z-index: 100;
+
     clip-path: polygon(5% 0, 95% 0, 100% 9%, 100% 91%, 95% 100%, 5% 100%, 0 91%, 0 9%);
     display: flex;
 
