Done : Cross responsive Projects

--- a/src/components/Projects/Project/Project.module.scss
+++ b/src/components/Projects/Project/Project.module.scss
@@ -53,8 +53,9 @@
             height: 7.5rem;
             // line-height: 0.05;
             font-family: "Nacelle";
-            font-style: bold;
-            font-size: 2.5rem;
+            font-style: normal;
+            text-transform: uppercase;
+            font-size: 1.5rem;
             margin: 0;
             padding: 0;
         }
