--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -13,13 +13,15 @@
 
     &__box {
         width: 85%;
+        aspect-ratio: 2.53;
         position: relative;
-        height: 90%;
+
         // border: 2px solid red;
         z-index: 1;
         h2 {
+            position: absolute;
             margin: 0;
-            margin-top: -4rem;
+            top: -9vw;
             font-family: "OktaNeue-Regular";
             font-size: 6rem;
             color: rgba(232, 230, 230, 0.935);
@@ -28,7 +30,7 @@
 
         &__content {
             // border: 2px solid blue;
-            height: 70%;
+            height: 100%;
             display: flex;
 
             &__view {
@@ -143,11 +145,11 @@
         &__svgProjectBox {
             position: absolute;
             z-index: -1;
-            top: 15%;
+            top: 0;
             // border: 2px solid red;
             width: 100%;
             display: flex;
-            margin-top: -2rem;
+
             background-color: #f8f8f8dc;
             -webkit-backdrop-filter: blur(20px);
             backdrop-filter: blur(20px);
@@ -157,8 +159,9 @@
 
         &__svgGoToExp {
             position: absolute;
-            bottom: 12.3%;
-            right: 12.8%;
+            width: 30%;
+            bottom: -1vw;
+            right: 15.3vw;
             // border: 2px solid blue;
         }
 
@@ -169,12 +172,12 @@
         }
 
         &__svgCross__one {
-            top: 4vw;
-            right: -0.9%;
+            top: -11px;
+            right: -11px;
         }
         &__svgCross__two {
-            bottom: 6.3vw;
-            left: -0.9%;
+            bottom: -11px;
+            left: -11px;
         }
     }
 
