--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,29 +1,71 @@
+@import "../../assets/styles/theme.scss";
 .navbar {
     position: fixed;
-    z-index: 1000;
-    top: 0;
-    left: 0;
+    z-index: 10;
+    top: 10%;
+    left: 9px;
     // border: 2px solid red;
-    width: 3.5rem;
-    height: 50%;
+
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 10px;
+    font-family: "OktaNeue-Regular";
+    font-size: 20px;
+
     &__logo {
+        position: relative;
+        mix-blend-mode: darken;
         margin-top: 5px;
-        width: 100%;
-        height: 15%;
-        // border: 2px solid purple;
+        width: 13%;
+        border: 2px solid red;
+        // border: 2px solid purple;q
         display: flex;
         align-items: center;
         justify-content: center;
+        // background-color: blue;
+
         img {
             width: 50px;
             height: 50px;
         }
     }
     &__menu {
-        margin-top: 10px;
+        mix-blend-mode: normal;
+        width: 35px;
+        height: 100px;
+        background-color: rgba(255, 255, 255, 0.494);
+
+        clip-path: polygon(0 0, 100% 0, 100% 90%, 75% 100%, 0 100%);
+        -webkit-backdrop-filter: blur(13px);
+        backdrop-filter: blur(13px);
+        writing-mode: vertical-rl;
+        transform: rotate(180deg);
+
+        span {
+            padding-top: 7px;
+        }
+    }
+    &__letstalk {
+        width: 35px;
+        height: 150px;
+        background-color: rgba(8, 8, 8, 0.778);
+        color: white;
+        clip-path: polygon(0 0, 100% 0, 100% 93%, 75% 100%, 0 100%);
+        -webkit-backdrop-filter: blur(13px);
+        backdrop-filter: blur(13px);
+        writing-mode: vertical-rl;
+        transform: rotate(180deg);
+        span {
+            padding-top: 7px;
+        }
+    }
+
+    &__sound {
+        background-color: rgba(255, 255, 255, 0.494);
+        width: 30px;
+        padding: 2.5px;
+        -webkit-backdrop-filter: blur(13px);
+        backdrop-filter: blur(13px);
     }
 }
