--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -21,9 +21,10 @@
         h2 {
             position: absolute;
             margin: 0;
-            top: -3.5vw;
+            left: 10px;
+            top: -2.3vw;
             font-family: "OktaNeue-Regular";
-            font-size: 70px;
+            font-size: 77px;
             color: white;
             // backdrop-filter: blur(13px);
             // -webkit-backdrop-filter: blur(13px);
