--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -21,11 +21,14 @@
         h2 {
             position: absolute;
             margin: 0;
-            left: 10px;
-            top: -2.3vw;
-            font-family: "OktaNeue-Regular";
-            font-size: 77px;
+            left: 3rem;
+            top: -5.6vw;
+            text-transform: uppercase;
+            font-family: "Nacelle-Regular";
+            font-size: 105px;
+            width: 200%;
             color: white;
+            // color: rgba(220, 220, 220, 0.753);
             // backdrop-filter: blur(13px);
             // -webkit-backdrop-filter: blur(13px);
             mix-blend-mode: difference;
@@ -50,14 +53,14 @@
                     // border: 2px solid green;
                     position: relative;
                     width: 100%;
-                    height: 80%;
+                    height: 70%;
                     &__img {
                         // border: 2px solid red;
-                        width: 100%;
                         position: absolute;
-                        top: 17%;
+                        top: 16%;
                         left: 10%;
-                        width: 75%;
+                        width: 80%;
+                        height: 80%;
                         object-fit: cover;
                         overflow: hidden;
                         background-color: black;
@@ -79,11 +82,11 @@
                     display: flex;
                     width: 90%;
                     height: 2.4rem;
-                    margin-top: 3rem;
+                    margin-top: 5rem;
                     // border: 2px solid orange;
                     justify-content: space-between;
                     font-family: "OktaNeue-Regular";
-                    font-size: 1.4rem;
+                    font-size: 1.2rem;
                     border-bottom: 1px solid black;
                     &__project {
                         margin-left: 1rem;
@@ -96,7 +99,7 @@
                     ul {
                         padding: 0;
                         margin: 0;
-                        margin-top: 0.5rem;
+                        margin-top: 1.5rem;
                     }
                     li {
                         box-sizing: border-box;
@@ -118,10 +121,11 @@
                         gap: 10px;
                         text-transform: uppercase;
                         &__text {
-                            text-transform: initial;
+                            // text-transform: initial;
                             margin: 0;
-                            font-family: "OktaNeue-Light";
-                            line-height: 0.9;
+                            font-family: "OktaNeue-Regular";
+                            font-size: 14px;
+                            line-height: 1;
                         }
                         &__year {
                             margin-right: 1.3rem;
@@ -131,8 +135,10 @@
 
                     .liHover {
                         font-size: 18px;
-                        background-color: rgb(255, 252, 252);
-                        color: rgb(16, 11, 11);
+                        // mix-blend-mode: difference;
+                        background-color: rgba(14, 13, 13, 0.753);
+                        color: rgb(233, 232, 232);
+
                         -webkit-clip-path: polygon(
                             25% 0,
                             100% 0,
@@ -156,9 +162,9 @@
             width: 100%;
             display: flex;
 
-            background-color: rgba(255, 255, 255, 0.494);
-            -webkit-backdrop-filter: blur(20px);
-            backdrop-filter: blur(20px);
+            background-color: rgba(245, 254, 255, 0.641);
+            -webkit-backdrop-filter: blur(13px);
+            backdrop-filter: blur(13px);
 
             clip-path: url(#projectMask);
         }
@@ -166,8 +172,8 @@
         &__svgGoToExp {
             position: absolute;
             width: 30%;
-            bottom: -1vw;
-            right: 15.3vw;
+            bottom: -0.7vw;
+            right: 16.7vw;
             background-color: rgba(8, 8, 8, 0.778);
             -webkit-backdrop-filter: blur(13px);
             backdrop-filter: blur(13px);
