--- a/src/components/PlayView/PlayView.module.scss
+++ b/src/components/PlayView/PlayView.module.scss
@@ -6,12 +6,9 @@
     right: 3rem;
     // mix-blend-mode: exclusion;
 
-    font-family: "OktaNeue-Regular";
-    font-size: 1.3rem;
-
     button {
-        font-family: "OktaNeue-Regular";
-        font-size: 1.3rem;
+        font-family: "VCR_OSD";
+        font-size: 1.4rem;
         cursor: pointer;
         border: none;
         background-color: transparent;
