--- a/src/components/Projects/Project/Project.module.scss
+++ b/src/components/Projects/Project/Project.module.scss
@@ -50,32 +50,49 @@
         &__title {
             // border: 2px solid green;
             width: 70%;
-            height: 7.5rem;
+            height: 5.5rem;
             // line-height: 0.05;
-            font-family: "Nacelle";
+            font-family: "VCR_OSD";
             font-style: normal;
             text-transform: uppercase;
             font-size: 1.5rem;
             margin: 0;
             padding: 0;
+            margin-top: 7vh;
+            margin-bottom: 20px;
         }
         &__box {
             width: 100%;
             // border: 2px solid purple;
-            height: 70%;
+            height: 50%;
             display: flex;
             justify-content: center;
 
             &__ctn {
+                position: relative;
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 width: 80%;
                 object-fit: cover;
+                overflow: hidden;
                 // border: 2px solid red;
 
                 img {
                     width: 100%;
+                }
+
+                button {
+                    cursor: pointer;
+                    border: none;
+                    font-family: "VCR_OSD";
+                    font-size: 20px;
+                    background-color: #151818;
+                    color: white;
+                    padding: 7px 15px;
+                    position: absolute;
+                    bottom: 0;
+                    right: 0;
                 }
             }
         }
@@ -89,15 +106,19 @@
         gap: 15px;
 
         p {
-            font-family: "OktaNeue-Light";
+            font-family: "Right_Grotesk_Fine";
+            letter-spacing: 1px;
+            font-weight: 200;
             font-size: 16px;
             width: 74%;
             margin: 0;
+            margin-top: 5px;
             // border: 2px solid blue;
         }
 
         h3 {
-            font-family: "OktaNeue-Regular";
+            font-family: "Right_Grotesk";
+            letter-spacing: 2px;
             font-size: 17px;
             margin: 0;
         }
@@ -119,7 +140,9 @@
             &__ask {
                 line-height: 2;
                 font-size: 18px;
-                font-family: "OktaNeue-Bold";
+                font-family: "VCR_OSD";
+                font-weight: 900;
+                letter-spacing: 1px;
             }
         }
     }
@@ -134,8 +157,11 @@
         display: flex;
         align-items: center;
         gap: 5px;
-        font-family: "OktaNeue-Regular";
-        font-size: 18px;
+        font-family: "VCR_OSD";
+        color: rgb(44, 37, 37);
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 1.5;
         cursor: pointer;
 
         span {
@@ -174,7 +200,7 @@
             height: 3rem;
             width: 15rem;
             clip-path: polygon(0 0, 100% 0, 100% 83%, 96% 100%, 0 100%);
-            font-family: "OktaNeue-Regular";
+            font-family: "VCR_OSD";
             font-size: 21px;
             text-align: left;
             padding-left: 12px;
