--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -63,30 +63,30 @@
                 align-items: center;
                 // border: 2px solid purple;
                 &__ctn {
+                    margin-top: 3vw;
                     display: flex;
                     justify-content: center;
                     align-items: center;
                     // border: 2px solid green;
+                    clip-path: polygon(0 0, 100% 0, 100% 93%, 95% 100%, 0 100%);
                     position: relative;
-                    width: 100%;
-                    height: 58%;
-                    margin-top: -2rem;
+                    width: 80%;
+                    aspect-ratio: 1.78;
+                    // box-shadow: 0px 0px 90px 10px rgba(0, 0, 0, 0.874);
+
                     &__img {
-                        // border: 2px solid red;
+                        // border: 1px solid rgb(149, 149, 149);
                         clip-path: polygon(0 0, 100% 0, 100% 93%, 95% 100%, 0 100%);
+
                         position: absolute;
-                        top: 16%;
-                        left: 10%;
-                        width: 80%;
-                        height: 70%;
-                        object-fit: cover;
-                        overflow: hidden;
+                        top: 0;
+                        left: 0;
+                        bottom: 0;
+                        right: 0;
+                        padding: 0;
+                        margin: 0;
+
                         // background-color: black;
-                        img {
-                            // border: 2px solid pink;
-                            width: 100%;
-                            transition: 0.5s;
-                        }
                     }
                 }
             }
