--- a/src/components/Title/Title.module.scss
+++ b/src/components/Title/Title.module.scss
@@ -10,6 +10,7 @@
     &__first,
     &__second {
         font-family: "Nacelle-Regular";
+        // color: rgb(231, 231, 231);
         color: rgb(34, 39, 55);
         // mix-blend-mode: difference;
         font-size: 11rem;
@@ -26,6 +27,7 @@
     flex-direction: column;
     font-family: "OktaNeue-Regular";
     font-size: 1.5rem;
+    // color: rgb(231, 231, 231);
     color: rgb(34, 39, 55);
     // mix-blend-mode: difference;
     // border: 2px solid blue;
