--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -11,73 +11,87 @@
     top: 0;
     // border: 2px solid green;
 
+    h2 {
+        font-family: Nacelle;
+        text-transform: uppercase;
+        font-size: 20px;
+        font-weight: 800;
+        // border: 2px solid red;
+        text-align: center;
+        margin: 0;
+        margin-top: 25px;
+        color: #091429;
+    }
+
     &__box {
         width: 85%;
-        aspect-ratio: 2.53;
+        aspect-ratio: 2.29;
         position: relative;
-        margin-top: -6rem;
-        // border: 2px solid red;q
-        &__title {
-            position: absolute;
-            left: 9rem;
-            top: -2.6vw;
-            display: flex;
-            justify-content: right;
-            align-items: center;
-            height: 13%;
-
-            width: 35%;
-            background-color: rgba(244, 244, 244, 0.459);
-            -webkit-backdrop-filter: blur(13px);
-            backdrop-filter: blur(13px);
-
-            clip-path: url(#gotoexpMask);
-            transform: rotate(180deg);
-            h2 {
-                margin: 0;
-                margin-right: 20px;
-                margin-top: 5px;
-                text-transform: uppercase;
-                font-family: "OktaNeue-Regular";
-                font-size: 25px;
-                transform: rotate(180deg);
-                color: rgba(255, 255, 255, 0.448);
-
-                // color: rgba(220, 220, 220, 0.753);
-                // backdrop-filter: blur(13px);
-                // -webkit-backdrop-filter: blur(13px);
-                // mix-blend-mode: difference;
-                // border: 2px solid green;
-            }
-        }
+        margin-top: -4%;
+        -webkit-backdrop-filter: blur(20px);
+        backdrop-filter: blur(20px);
+        background-color: #f6f6f6b9;
 
         &__content {
             // border: 2px solid blue;
-            height: 100%;
+            height: 80%;
             display: flex;
+            position: relative;
 
+            &__games {
+                position: absolute;
+                bottom: 0;
+                left: 10%;
+                // border: 2px solid green;
+                width: 40%;
+                ul {
+                    padding: 0;
+                    margin: 0;
+                    padding-top: 1rem;
+                    height: 120%;
+                    width: 60%;
+                    margin-top: 20%;
+                }
+                li {
+                    box-sizing: border-box;
+                    height: 19px;
+                    cursor: pointer;
+                    padding-bottom: 3px;
+
+                    width: 90%;
+                    list-style: none;
+                    display: flex;
+                    justify-content: space-between;
+
+                    align-items: center;
+                    font-family: "Nacelle";
+                    font-size: 13px;
+                    color: #091429;
+                    background-color: "transparent";
+                }
+            }
             &__view {
-                width: 47%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
+                width: 63%;
+                height: 75%;
+
+                position: relative;
                 // border: 2px solid purple;
                 &__ctn {
-                    margin-top: 3vw;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    // border: 2px solid green;
-                    clip-path: polygon(0 0, 100% 0, 100% 93%, 95% 100%, 0 100%);
-                    position: relative;
-                    width: 80%;
-                    aspect-ratio: 1.78;
+                    border: 2px solid green;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 95%;
+                    height: 100%;
+                    // opacity: 0;
+                    // aspect-ratio: 1.78;
                     // box-shadow: 0px 0px 90px 10px rgba(0, 0, 0, 0.874);
 
                     &__img {
                         // border: 1px solid rgb(149, 149, 149);
-                        clip-path: polygon(0 0, 100% 0, 100% 93%, 95% 100%, 0 100%);
+                        height: 0%;
 
+                        opacity: 0;
                         position: absolute;
                         top: 0;
                         left: 0;
@@ -91,57 +105,35 @@
                 }
             }
             &__text {
-                // border: 2px solid black;
-                width: 53%;
+                width: 35%;
                 display: flex;
                 flex-direction: column;
+                // border: 2px solid green;
 
-                &__banner {
-                    display: flex;
-                    width: 95%;
-                    height: 2.5rem;
-                    margin-top: 3rem;
-                    // border: 2px solid orange;
-                    justify-content: space-between;
-                    font-family: "VCR_OSD";
-                    font-size: 1.2rem;
-                    border-bottom: 1px solid black;
-                    &__project {
-                        margin-left: 1rem;
-                        font-size: 25px;
-                    }
-                    &__year {
-                        font-size: 25px;
-                        margin-right: 1rem;
-                    }
-                }
                 &__projects {
                     ul {
                         padding: 0;
                         margin: 0;
                         padding-top: 1rem;
                         height: 120%;
-                        width: 95%;
-                        // margin-top: 1.5rem;
-                        border: 1px solid black;
+                        width: 88%;
+                        margin-top: 20%;
                     }
                     li {
                         box-sizing: border-box;
-                        height: 33px;
+                        height: 20px;
                         cursor: pointer;
-                        padding-bottom: 8px;
-                        padding-top: 7px;
-                        padding-left: 15px;
+                        padding-bottom: 3px;
+
                         width: 100%;
                         list-style: none;
                         display: flex;
                         justify-content: space-between;
 
                         align-items: center;
-                        font-family: "Right_Grotesk";
-                        letter-spacing: 1px;
-                        font-size: 16px;
-                        color: black;
+                        font-family: "Nacelle";
+                        font-size: 13px;
+                        color: #091429;
                         background-color: "transparent";
                     }
                     &__project {
@@ -155,68 +147,30 @@
                         &__year {
                             margin-right: 1.3rem;
                             font-weight: 500;
-                            font-family: "VCR_OSD";
+                            font-family: "Nacelle";
                         }
                     }
 
-                    .liHover {
-                        // font-size: 18px;
-                        // mix-blend-mode: difference;
-                        background-color: rgba(14, 13, 13, 0.946);
-                        color: rgb(255, 255, 255);
-
-                        // -webkit-clip-path: polygon(
-                        //     25% 0,
-                        //     100% 0,
-                        //     100% 100%,
-                        //     75% 100%,
-                        //     0 100%,
-                        //     0 30%,
-                        //     2% 0
-                        // );
-                        // clip-path: polygon(25% 0, 100% 0, 100% 100%, 75% 100%, 0 100%, 0 30%, 2% 0);
-                    }
+                    // .liHover {
+                    //     // font-size: 18px;
+                    //     // mix-blend-mode: difference;
+                    //     background-color: rgba(14, 13, 13, 0.946);
+                    //     color: rgb(255, 255, 255);
+                    // }
                 }
             }
-        }
-
-        &__svgProjectBox {
-            position: absolute;
-            z-index: -1;
-            top: 0;
-            // border: 2px solid red;
-            width: 100%;
-            display: flex;
-
-            background-color: rgba(245, 254, 255, 0.641);
-            -webkit-backdrop-filter: blur(13px);
-            backdrop-filter: blur(13px);
-
-            clip-path: url(#projectMask);
-        }
-
-        &__svgGoToExp {
-            position: absolute;
-            width: 30%;
-            bottom: -0.7vw;
-            right: 16.7vw;
-            background-color: rgba(8, 8, 8, 0.864);
-            -webkit-backdrop-filter: blur(13px);
-            backdrop-filter: blur(13px);
-            clip-path: url(#gotoexpMask);
-            // border: 2px solid blue;
         }
         &__goToExp {
             cursor: pointer;
             margin: 0;
             position: absolute;
-            color: white;
-            bottom: 0.2vw;
-            right: 18.7vw;
+            color: #091429;
+            bottom: 1.2vw;
+            right: 4.7vw;
             // border: 2px solid red;
             font-family: "VCR_OSD";
             font-size: 24px;
-            width: 23%;
+            width: 15%;
             display: flex;
             justify-content: space-between;
             span {
@@ -225,21 +179,6 @@
             &__arrow {
                 width: 25px;
             }
-        }
-
-        &__svgCross__one,
-        &__svgCross__two {
-            position: absolute;
-            // border: 2px solid red;
-        }
-
-        &__svgCross__one {
-            top: -11px;
-            right: -11px;
-        }
-        &__svgCross__two {
-            bottom: -11px;
-            left: -11px;
         }
     }
 
@@ -292,7 +231,7 @@
             height: 30px;
             font-family: "OktaNeue-Regular";
             font-weight: 600;
-            font-size: 16px;
+            font-size: 13px;
             letter-spacing: 0.2px;
         }
     }
