--- a/src/components/PlayView/PlayView.module.scss
+++ b/src/components/PlayView/PlayView.module.scss
@@ -8,7 +8,8 @@
 
     button {
         font-family: "VCR_OSD";
-        font-size: 1.4rem;
+        font-weight: 500;
+        font-size: 1.2rem;
         cursor: pointer;
         border: none;
         background-color: transparent;
