--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -15,7 +15,7 @@
         font-family: Nacelle;
         text-transform: uppercase;
         font-size: 20px;
-        font-weight: 800;
+        font-weight: 600;
         // border: 2px solid red;
         text-align: center;
         margin: 0;
@@ -24,13 +24,13 @@
     }
 
     &__box {
-        width: 85%;
+        width: 90%;
         aspect-ratio: 2.29;
         position: relative;
-        margin-top: -4%;
-        -webkit-backdrop-filter: blur(20px);
-        backdrop-filter: blur(20px);
-        background-color: #f6f6f6b9;
+        margin-top: -4.5%;
+        -webkit-backdrop-filter: blur(10px);
+        backdrop-filter: blur(10px);
+        background-color: #faf9f9f4;
 
         &__content {
             // border: 2px solid blue;
@@ -65,9 +65,16 @@
 
                     align-items: center;
                     font-family: "Nacelle";
-                    font-size: 13px;
+                    font-weight: 300;
+                    font-size: 15px;
                     color: #091429;
                     background-color: "transparent";
+                }
+                .liHover {
+                    // font-size: 18px;
+                    // mix-blend-mode: difference;
+                    // background-color: rgba(14, 13, 13, 0.946);
+                    color: rgb(157, 151, 148);
                 }
             }
             &__view {
@@ -77,7 +84,7 @@
                 position: relative;
                 // border: 2px solid purple;
                 &__ctn {
-                    border: 2px solid green;
+                    // border: 2px solid green;
                     position: absolute;
                     top: 0;
                     left: 0;
@@ -132,7 +139,8 @@
 
                         align-items: center;
                         font-family: "Nacelle";
-                        font-size: 13px;
+                        font-size: 15px;
+                        font-weight: 300;
                         color: #091429;
                         background-color: "transparent";
                     }
@@ -151,12 +159,12 @@
                         }
                     }
 
-                    // .liHover {
-                    //     // font-size: 18px;
-                    //     // mix-blend-mode: difference;
-                    //     background-color: rgba(14, 13, 13, 0.946);
-                    //     color: rgb(255, 255, 255);
-                    // }
+                    .liHover {
+                        // font-size: 18px;
+                        // mix-blend-mode: difference;
+                        // background-color: rgba(14, 13, 13, 0.946);
+                        color: rgb(157, 151, 148);
+                    }
                 }
             }
         }
